# ros2_shm_vision_demo

./: .gitignore  CMakeLists.txt  README.md  package.xml
.github/workflows/: ros2_ci.yml
config/: cyclonedds.xml  roudi_config.toml
include/: background.hpp  edge_detector.hpp  exchange_sync.hpp  filter.hpp  fps_estimator.hpp  image_message.hpp  object_detector.hpp  perf_stats.hpp  saliency.hpp  stop_watch.hpp
include/shm_vision_demo/: background.hpp  edge_detector.hpp  exchange_sync.hpp  filter.hpp  fps_estimator.hpp  image_message.hpp  msg_types.hpp  object_detector.hpp  perf_stats.hpp  saliency.hpp
msg/: Image.msg  tmp.md
scripts/: demo.sh  download_yolo_cfg.sh  download_yolo_weights.sh  shm_demo.sh  stop_demo.sh  utils.sh
src/: edge_detector_node.cpp  filter_node.cpp  listener.cpp  object_detector_node.cpp  optical_flow_node.cpp  talker.cpp  worker.cpp
