<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>shm_vision_demo</name>
  <version>0.14.3</version>
  <description>
    Show how to use Shared Memory in ROS 2 with CycloneDDS and iceoryx as middleware.
  </description>
  <maintainer email="matthias.killat@gmx.de">Matthias Killat</maintainer>
  <license>Apache License 2.0</license>
  <author email="matthias.killat@gmx.de">Matthias Killat</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>iceoryx_posh</build_depend>

  <depend>vision_opencv</depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>iceoryx_posh</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
